fixed hover on mobile blocking functions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -395,6 +395,9 @@ h1 {
     margin-bottom: 20px;
   }
 }
-.task-list:hover {
-  transform: scale(1.05);
+
+@media only screen and (min-width: 830px) {
+  .task-list:hover {
+    transform: scale(1.05);
+  }
 }
